# emugenWindowsBuild

./: Android.mk  ApiGen.cpp  ApiGen.h  BuildTest.sln  BuildTest.vcxproj  CMakeLists.txt  ConsoleApplication1.sln  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  EntryPoint.cpp  README  README.md  TypeFactory.cpp  Var.h  VarType.h  enum.diff  getopt.cpp  getopt.h  main.cpp  strUtils.cpp
